--- a/docker/Dockerfile_binary
+++ b/docker/Dockerfile_binary
@@ -3,22 +3,25 @@ FROM $BASE_IMAGE
 
 ENV http_proxy http://172.17.0.1:7890
 ENV https_proxy http://172.17.0.1:7890
-ENV DEBIAN_FRONTEND=noninteractive
 
+RUN apt-key del 7fa2af80
+RUN apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/3bf863cc.pub
+RUN rm /etc/apt/sources.list.d/nvidia-ml.list
 RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get install -y --no-install-recommends \
-	wget \
 	python3 \
 	python3-pip \
 	sudo \
+	git \
 	libglu1-mesa-dev \
 	xdg-user-dirs \
 	pulseaudio \
 	x11-xserver-utils
-
+	
+RUN pip3 install numpy setuptools wheel 
 RUN python3 -m pip install --upgrade pip && \
-	pip3 install msgpack-rpc-python && \
-	pip3 install opencv-python && \
-    pip3 install setuptools wheel && \
+    pip3 install msgpack-rpc-python wheel && \
+	pip3 install opencv-python==4.2.0.32 && \
+	pip3 install opencv-contrib-python==4.2.0.32 && \
     pip3 install airsim
 
 RUN adduser --force-badname --disabled-password --gecos '' --shell /bin/bash airsim_user && \
