--- a/ros/src/drone_exploration/CMakeLists.txt
+++ b/ros/src/drone_exploration/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   sensor_msgs
   std_msgs
+  pcl_conversions
 )
 
 ## System dependencies are found with CMake's conventions
