--- a/ros/src/drone_exploration/package.xml
+++ b/ros/src/drone_exploration/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="mrmmm@todo.todo">mrmmm</maintainer>
+  <maintainer email="tk@todo.todo">tk</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
