--- a/ros/src/drone_exploration/scripts/gym_env/configs/env_config_simple_resnet.yaml
+++ b/ros/src/drone_exploration/scripts/gym_env/configs/env_config_simple_resnet.yaml
@@ -30,4 +30,4 @@ map:
   loacl_map_range: [22.4, 22.4, 3.2] #112*112*16
   resolution: 0.2
   free_ratio: 0.8
-  init_map_path:  /home/mrmmm/DRL_Exploration_With_Airsim/ros/src/drone_exploration/scripts/gym_env/configs/globale_map_init #None
+  init_map_path:  /home/${USER}/Exploration_With_Airsim/ros/src/drone_exploration/scripts/gym_env/configs/globale_map_init #None
